# numba-dojo

./: .gitignore  ARTICLE.md  Makefile  README.md  requirements.txt
benchmarks/cuda/: benchmark.cu
benchmarks/python/: bench_cuda.py  bench_numba.py
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: main.rs
results/: RESULTS.md  cuda_cpp.json  numba_cpu.json  numba_cuda.json  rust_cpu.json
scripts/: run_benchmarks.py  visualize.py
